# CustomSonosController

./: .gitignore  README.md  build-installer.bat  install.bat  launch.bat
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: group.py  queue.py  speaker.py
backend/app/routers/: groups.py  playback.py  queue.py  speakers.py  volume.py  websocket.py
backend/app/services/: poller.py  speaker_service.py
backend/app/ws/: manager.py
desktop/: electron-builder.yml  package.json
desktop/src/: main.js
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  groups.ts  playback.ts  queue.ts  speakers.ts  volume.ts
frontend/src/components/GroupManager/: GroupManager.module.css  GroupManager.tsx
frontend/src/components/PlayerControls/: PlayerControls.module.css  PlayerControls.tsx
frontend/src/components/QueuePanel/: QueuePanel.module.css  QueuePanel.tsx
frontend/src/components/SpeakerCard/: SpeakerCard.module.css  SpeakerCard.tsx
frontend/src/components/SpeakerList/: SpeakerList.module.css  SpeakerList.tsx
frontend/src/components/VolumeSlider/: VolumeSlider.module.css  VolumeSlider.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: types.ts  useAppStore.ts
